[gd_scene load_steps=4 format=3 uid="uid://v3ebl4m062sa"]

[ext_resource type="Script" uid="uid://ch0fvki08grhd" path="res://scripts/action_node.gd" id="1_action"]
[ext_resource type="PackedScene" uid="uid://dqcj6n1sbx56l" path="res://scenes/components/competence_node.tscn" id="3_comp3"]
[ext_resource type="Theme" uid="uid://bk5igrtvvlm3j" path="res://themes/character_sheet_theme.tres" id="4_theme"]

[node name="ActionNode" type="VBoxContainer"]
clip_contents = true
offset_right = 198.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("4_theme")
theme_override_constants/separation = 2
script = ExtResource("1_action")

[node name="HeaderContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="LinkedAttrLabel" type="Label" parent="HeaderContainer"]
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "(FOR)"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HeaderContainer"]
layout_mode = 2

[node name="NameButton" type="Label" parent="HeaderContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "â–¶ Frapper"
text_overrun_behavior = 3

[node name="VSeparator2" type="VSeparator" parent="HeaderContainer"]
layout_mode = 2

[node name="PotentialLabel" type="Label" parent="HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
text = "PT: 0"
vertical_alignment = 1

[node name="CompetencesSeparator" type="HSeparator" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="CompetencesContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="Competence0" parent="CompetencesContainer" instance=ExtResource("3_comp3")]
layout_mode = 2

[node name="CompetenceSeparator1" type="HSeparator" parent="CompetencesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Competence1" parent="CompetencesContainer" instance=ExtResource("3_comp3")]
layout_mode = 2
competence_id = 1

[node name="CompetenceSeparator2" type="HSeparator" parent="CompetencesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Competence2" parent="CompetencesContainer" instance=ExtResource("3_comp3")]
layout_mode = 2
competence_id = 2
